--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "github-slugger": "^1.4.0",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
